--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script id="template-photo" type="x-tmpl-mustache">
       {{#albums}}
       <h2> {{albumName}} </h2>
-      <div class="gallery-container">
+      <div class="photo-list">
         {{#photos}}
         <div class="album">
           <a target="_blank" href="{{photoFile}}">
