--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <h2> {{albumName}} </h2>
       <div class="photo-list">
         {{#photos}}
-        <div class="album">
+        <div class="photo-container">
           <a target="_blank" href="{{photoFile}}">
-            <img class="cover-main" src="{{thumbnailFile}}" alt="Ballade" width="200" height="200" <="" a="">
+            <img src="{{thumbnailFile}}" alt="Ballade" width="200" height="200" <="" a="">
           </a>
         </div>
         {{/photos}}
