Fade in and out

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </span>
     </nav>
     
-    <div id="main-group" class="gallery-group">
+    <div id="main-group" class="ablums-view">
     </div>
     
-    <div id="dev-group" class="gallery-group">
+    <div id="dev-group" class="ablums-view">
     </div>
   </body>
 </html>
